objects/FISIBSAuthConfig__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>FIS IBS Authentication Configuration</description>
    <fields>
        <fullName>BrandCode__c</fullName>
        <description>The Code of the charter the data is associated with</description>
        <encryptionScheme>None</encryptionScheme>
        <label>BrandCode</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FailedReason__c</fullName>
        <description>The Code of the charter the data is associated with</description>
        <encryptionScheme>None</encryptionScheme>
        <label>FailedReason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IBSAuthorization__c</fullName>
        <description>Base64 encode the string in the format &amp;quot;userid:password&amp;quot;</description>
        <encryptionScheme>None</encryptionScheme>
        <label>IBSAuthorization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean flag to check User Id inuse</description>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastUpdatedDate__c</fullName>
        <description>Last password updated date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>LastUpdatedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <description>User Id</description>
        <encryptionScheme>None</encryptionScheme>
        <label>UserId</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>FISIBSAuthConfig</label>
    <listViews>
        <fullName>DetailView</fullName>
        <columns>NAME</columns>
        <columns>UserId__c</columns>
        <columns>BrandCode__c</columns>
        <columns>IBSAuthorization__c</columns>
        <columns>IsActive__c</columns>
        <columns>FailedReason__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>DetailView</label>
        <language>en_US</language>
    </listViews>
</CustomObject>